Fix build options unreadable in dark mode (#4190)

--- a/src/css/tabs/setup.less
+++ b/src/css/tabs/setup.less
@@ -115,7 +115,6 @@
     transition: all 0.2s;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: white;
     width: min-content;
     height: min-content;
 }
